[metadata]
name = get-releasenote
url = https://github.com/aio-libs/get-releasenote
project_urls =
  GitHub = https://github.com/aio-libs/get-releasenote
description = Towncrier changelog extractor
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
classifiers =
  Development Status :: 4 - Beta

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10


[options]
python_requires = >=3.7
packages = find:
include_package_data = True

install_requires =
  packaging >= 21.3


[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile=black

[tool:pytest]
addopts = --cov=get_releasenote -v --cov-branch --cov-report xml
filterwarnings =
    error
minversion = 3.8.2
testpaths = tests.py
junit_family=xunit2
xfail_strict = true
